@@ -1,3 +1,8 @@
+2008-09-27  Andreas Schwab  <schwab@suse.de>
+
+	* gnus-util.el (gnus-split-references): Strip comments.
+	(gnus-parent-id): Likewise.
+
 2008-09-25  Teodor Zlatanov  <tzz@lifelogs.com>
 
 	* message.el (message-confirm-send): Fixed variable documentation to
